tests/errors/syntax_errors/import_star.py
from dict_str_keys import *

print(a)
